# KnightRider

./: Cargo.toml  README.md
docs/: index.html  obd-ii-reference.md  robots.txt  script.js  style.css
project description/: architecture.md  system_flow.md
scripts/: setup-vcan.sh
src/: lib.rs  main.rs
src/can/: interface.rs  isotp.rs  mod.rs  obd.rs  scheduler.rs
src/core/: datastore.rs  mod.rs  signals.rs  state_machine.rs
src/logging/: mod.rs  ringbuffer.rs  timeseries.rs
src/ui/: gauges.rs  mod.rs  renderer.rs  screens.rs
tests/fixtures/: sample_frames.json
tests/integration/: can_mock.rs
web/: index.html  style.css
