[package]
name = "knight-rider"
version = "0.1.0"
edition = "2021"
authors = ["Knight Rider Team"]
description = "Field-grade ECU diagnostic computer for Raspberry Pi"
license = "MIT"
readme = "README.md"
repository = "https://github.com/knight-rider/knight-rider"
keywords = ["automotive", "obd-ii", "can-bus", "diagnostics", "raspberry-pi"]
categories = ["embedded", "hardware-support"]

[[bin]]
name = "knight-rider"
path = "src/main.rs"

[dependencies]
# Logging - structured logging with timestamps
log = "0.4"
env_logger = "0.11"

# Timestamps - ISO 8601 formatting
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Serialization - for config and test fixtures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SocketCAN - Linux only, optional for cross-platform compilation
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3.3"
libc = "0.2"
nix = { version = "0.29", features = ["net", "poll"] }

[dev-dependencies]
# For testing
tempfile = "3.14"

[profile.release]
# Optimize for size and speed on embedded target
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Keep debug info, allow panics for development
opt-level = 0
debug = true
